--- a/p7zip_16.02/makefile.cygwin_asm
+++ b/p7zip_16.02/makefile.cygwin_asm
@@ -5,6 +5,7 @@ ALLFLAGS=${OPTFLAGS} \
     	-D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE \
 	-DNDEBUG -D_REENTRANT \
 	-DENV_UNIX \
+	-DENV_HAVE_BIRTHTIME \
 	-D_7ZIP_ASM \
 	$(LOCAL_FLAGS)
 
