--- a/p7zip_16.02/makefile.macosx_gcc_32bits
+++ b/p7zip_16.02/makefile.macosx_gcc_32bits
@@ -7,6 +7,7 @@ ALLFLAGS=-m32 ${OPTFLAGS}  \
 	-DENV_MACOSX \
     	-D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE \
 	-D_REENTRANT -DENV_UNIX \
+	-DENV_HAVE_BIRTHTIME \
 	$(LOCAL_FLAGS)
 
 CXX=c++
