--- a/p7zip_16.02/makefile.macosx_gcc_32bits_asm
+++ b/p7zip_16.02/makefile.macosx_gcc_32bits_asm
@@ -8,6 +8,7 @@ ALLFLAGS=${OPTFLAGS}  \
 	-DENV_MACOSX \
     	-D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE \
 	-D_REENTRANT -DENV_UNIX \
+	-DENV_HAVE_BIRTHTIME \
 	-D_7ZIP_ASM \
 	$(LOCAL_FLAGS)
 
