--- a/p7zip_16.02/makefile.macosx_llvm_64bits
+++ b/p7zip_16.02/makefile.macosx_llvm_64bits
@@ -7,6 +7,7 @@ ALLFLAGS=-m64 ${OPTFLAGS}  \
 	-DENV_MACOSX \
     	-D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE \
 	-D_REENTRANT -DENV_UNIX \
+	-DENV_HAVE_BIRTHTIME \
 	$(LOCAL_FLAGS)
 
 # For old Mac OS X :
