--- a/p7zip_16.02/makefile.netbsd
+++ b/p7zip_16.02/makefile.netbsd
@@ -8,6 +8,7 @@ OPTFLAGS=-O -s
 ALLFLAGS=${OPTFLAGS} \
     	-D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE \
 	-DNDEBUG -D_REENTRANT -DENV_UNIX \
+	-DENV_HAVE_BIRTHTIME \
 	$(LOCAL_FLAGS)
 
 CXX=g++
